# coursework_mailing

./: .env.sample  README.md  manage.py  pyproject.toml
blog/: models.py  urls.py  views.py
blog/management/commands/: clr.py
blog/migrations/: 0001_initial.py  0002_rename_blog_blogview.py  0003_remove_blogview_img_blogview_is_published_and_more.py
blog/templatetags/: photo_tags.py
djangoMailing/: asgi.py  settings.py  urls.py  wsgi.py
fixtures/: blog_data.json  mailing_data.json  users_data.json
mailing/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
mailing/migrations/: 0001_initial.py  0002_initial.py  0003_mailing_next_send_time.py  0004_alter_mailing_next_send_time.py  0005_alter_mailing_next_send_time.py  0006_remove_mailing_create_date_mailing_create_at_and_more.py  0007_alter_mailing_options.py  0008_alter_mailing_create_at_alter_mailing_next_send_time_and_more.py  0009_alter_mailing_create_at_alter_mailing_next_send_time_and_more.py  0010_alter_mailing_create_at_alter_mailing_next_send_time_and_more.py
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_ver_code_alter_user_is_active.py  0003_alter_user_ver_code.py  0004_alter_user_ver_code.py  0005_alter_user_ver_code.py  0006_alter_user_ver_code.py  0007_alter_user_ver_code.py  0008_alter_user_ver_code.py  0009_alter_user_ver_code.py  0010_alter_user_options_alter_user_ver_code.py  0011_alter_user_ver_code.py  0012_alter_user_ver_code.py  0013_alter_user_ver_code.py  0014_alter_user_ver_code.py  0015_alter_user_ver_code.py
(+34 files in other folders)
